tests/error/gack_decl2.gw
// [contains] can't declare in GACK
 <<< 0, int i >>>;
